tests/paczka1/fuzzy1/60581213.err
Error in line 11: CfK3fu A22 3,0
Error in line 12: KL1P A800 54,2
Error in line 27: KL1P A22 86,8
Error in line 35: SSz6 A857 7,2
